Fix profile image stretching issue
https://stackoverflow.com/a/37610279/1814949

--- a/themes/leon-overweel-com/static/css/main.css
+++ b/themes/leon-overweel-com/static/css/main.css
@@ -151,10 +151,11 @@ figure>figcaption>p {
 }
 
 .intro>img {
-    width: 180px;
-    height: 180px;
-    border-radius: 90px;
+    width: 11rem;
+    height: 11rem;
+    border-radius: 6rem;
     margin: 1rem 0;
+    align-self: center;
 }
 
 .intro>div {
